fix angle issues on mobile

--- a/css/parts/_defaults.scss
+++ b/css/parts/_defaults.scss
@@ -498,10 +498,7 @@ p.gform_required_legend,
 
 .alignfull {
 	position: relative;
-	width: 100vw;
-	left: 50%;
-	transform: translateX(-50%);
-	max-width: 100%;
+	width: 100%;
 }
 
 .alignwide {
